# GitHubSpace_Mac

./: .gitignore  README.md
githubspace/AndroidStudioHome/imocc_ImoocBusiness_teacher/imooc_business/imocc_server/: home_data.json
githubspace/IntelliJMac/Kotlin_Student/Test1/: build.gradle  settings.gradle
githubspace/IntelliJMac/Kotlin_Student/Test2/: build.gradle
githubspace/IntelliJMac/Kotlin_Teacher/Chapter1/: build.gradle
githubspace/IntelliJMac/Kotlin_Teacher/Chapter2/: build.gradle
githubspace/IntelliJMac/Kotlin_Teacher/Chapter3/: build.gradle
githubspace/IntelliJMac/Kotlin_Teacher/Chapter4/: build.gradle
githubspace/IntelliJMac/Kotlin_Teacher/Chapter6/: build.gradle.kts
githubspace/IntelliJMac/Kotlin_Teacher/Chapter8/: build.gradle
githubspace/IntelliJMac/Kotlin_Teacher/Chapter9/Kotlin-Javascript/: index.html  kotlin-javascript.js
githubspace/IntelliJMac/Kotlin_Teacher/Chapter9/Kotlin-Native-Demo/: build.gradle  kotliner.def  settings.gradle
githubspace/IntelliJMac/Kotlin_Teacher/Chapter9/Kotlin-Spring-boot/: build.gradle  settings.gradle
githubspace/IntelliJMac/Kotlin_Teacher/ChapterGenerics/: build.gradle  settings.gradle
githubspace/IntelliJMac/Kotlin_Teacher/ChapterReflections/: build.gradle  settings.gradle
githubspace/IntelliJMac/Kotlin_Teacher/KotlinMultiPlatform/: build.gradle  gradle.properties  settings.gradle
githubspace/IntelliJMac/Kotlin_Teacher/KotlinMultiPlatform/Android-Native/: build.gradle
githubspace/IntelliJMac/Kotlin_Teacher/KotlinMultiPlatform/AndroidApp-Native/src/main/cpp/: CMakeLists.txt  hello-jni.c
(+203 files in other folders)
